adding login and home

--- a/.docker/node/Dockerfile
+++ b/.docker/node/Dockerfile
@@ -6,6 +6,8 @@ RUN usermod -aG node nodeuser
 RUN echo -e '#!/bin/bash\nls -lah' > /usr/bin/ll && \
     chmod +x /usr/bin/ll
 
+RUN npm install -g @angular/cli
+
 RUN npm install -g @ionic/cli
 
 USER nodeuser
