--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@angular/service-worker": "~12.1.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage-angular": "^3.0.6",
+    "axios": "^0.21.1",
+    "core-js": "^3.16.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
+    "ts-httpexceptions": "^4.1.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
