--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/pwa": "^12.2.0",
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
     "@ionic/angular": "^5.5.2",
