--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^12.2.1",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
@@ -27,6 +28,8 @@
     "@ionic/storage-angular": "^3.0.6",
     "axios": "^0.21.1",
     "core-js": "^3.16.1",
+    "igniteui-angular": "^12.1.1",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "ts-httpexceptions": "^4.1.0",
