angular node python

--- a/.docker/node/Dockerfile
+++ b/.docker/node/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14
+FROM node:12
 
 RUN useradd -ms /bin/bash nodeuser
 RUN usermod -aG node nodeuser
@@ -13,5 +13,7 @@ RUN npm install -g @ionic/cli
 USER nodeuser
 
 CMD ["tail", "-f"]
+
+VOLUME //c/Users/ajay.ce.kumar/Documents/repos/ionic5
 
 WORKDIR /var/www/html/ionic5/
